--- a/index.html
+++ b/index.html
@@ -7,18 +7,60 @@
     <title>Document</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <a href="#"><img src="./src/images/logo_w.png" alt="" /></a>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Our Businesses</a></li>
+          <li><a href="#">Career</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </nav>
+    </header>
     <main class="wrapper">
       <section class="banner">
         <div class="item item1">
-          <div class="display">
-            <h1>DAL Innovative agriculture</h1>
+          <div class="contents">
+            <a href="#"><img src="./src/images/banner-arrow.png" alt="" /></a>
+            <div class="display">
+              <h1>DAL Innovative agriculture</h1>
+            </div>
           </div>
         </div>
-        <div class="item item2"></div>
-        <div class="item item3"></div>
-        <div class="item item4"></div>
-        <div class="item item5"></div>
+        <div class="item item2">
+          <div class="contents">
+            <a href="#"><img src="./src/images/banner-arrow.png" alt="" /></a>
+            <div class="display">
+              <h1>DAL Innovative agriculture</h1>
+            </div>
+          </div>
+        </div>
+        <div class="item item3">
+          <div class="contents">
+            <a href="#"><img src="./src/images/banner-arrow.png" alt="" /></a>
+            <div class="display">
+              <h1>DAL Innovative agriculture</h1>
+            </div>
+          </div>
+        </div>
+        <div class="item item4">
+          <div class="contents">
+            <a href="#"><img src="./src/images/banner-arrow.png" alt="" /></a>
+            <div class="display">
+              <h1>DAL Innovative agriculture</h1>
+            </div>
+          </div>
+        </div>
+        <div class="item item5">
+          <div class="contents">
+            <a href="#"><img src="./src/images/banner-arrow.png" alt="" /></a>
+            <div class="display">
+              <h1>DAL Innovative agriculture</h1>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="container">
         <div class="title-wrap">
