--- a/index.html
+++ b/index.html
@@ -164,59 +164,61 @@
       <section class="container">
         <div class="featuresgrid">
           <div class="item item1">
-            <img src="./src/images/features1.png" alt="" />
+            <img src="./src/images/icon-img1.png" alt="" />
             <h2>200,000</h2>
             <div class="body">
               <p>Acres of arable projects</p>
             </div>
           </div>
           <div class="item item2">
-            <img src="./src/images/features1.png" alt="" />
+            <img src="./src/images/icon-img2.png" alt="" />
             <h2>200,000</h2>
             <div class="body">
-              <p>Acres of arable projects</p>
+              <p>Bakers and homemakers trained in Bakery Development Center</p>
             </div>
           </div>
           <div class="item item3">
-            <img src="./src/images/features1.png" alt="" />
-            <h2>200,000</h2>
+            <img src="./src/images/icon-img3.png" alt="" />
+            <h2>1m</h2>
             <div class="body">
-              <p>Acres of arable projects</p>
+              <p>
+                ton capacity One of the largest milling operations in the region
+              </p>
             </div>
           </div>
           <div class="item item4">
-            <img src="./src/images/features1.png" alt="" />
-            <h2>200,000</h2>
+            <img src="./src/images/icon-img4.png" alt="" />
+            <h2>1m</h2>
             <div class="body">
-              <p>Acres of arable projects</p>
+              <p>liters of drinks are produced every day</p>
             </div>
           </div>
           <div class="item item5">
-            <img src="./src/images/features1.png" alt="" />
-            <h2>200,000</h2>
+            <img src="./src/images/icon-img5.png" alt="" />
+            <h2>8200+</h2>
             <div class="body">
-              <p>Acres of arable projects</p>
+              <p>Employees from 26 nationalities</p>
             </div>
           </div>
           <div class="item item6">
-            <img src="./src/images/features1.png" alt="" />
-            <h2>200,000</h2>
+            <img src="./src/images/icon-img6.png" alt="" />
+            <h2>90%</h2>
             <div class="body">
-              <p>Acres of arable projects</p>
+              <p>of Sudan covered</p>
             </div>
           </div>
           <div class="item item7">
-            <img src="./src/images/features1.png" alt="" />
-            <h2>200,000</h2>
+            <img src="./src/images/icon-img7.png" alt="" />
+            <h2>4.3%</h2>
             <div class="body">
-              <p>Acres of arable projects</p>
+              <p>of National GDP</p>
             </div>
           </div>
           <div class="item item8">
-            <img src="./src/images/features1.png" alt="" />
-            <h2>200,000</h2>
+            <img src="./src/images/icon-img8.png" alt="" />
+            <h2>25,000</h2>
             <div class="body">
-              <p>Acres of arable projects</p>
+              <p>Packs of milk distributed daily for the children of Sudan</p>
             </div>
           </div>
         </div>
@@ -229,25 +231,25 @@
               <img src="./src/images/product1.png" alt="" srcset="" />
             </div>
             <div class="item">
-              <img src="./src/images/product1.png" alt="" srcset="" />
+              <img src="./src/images/product2.png" alt="" srcset="" />
             </div>
             <div class="item">
-              <img src="./src/images/product1.png" alt="" srcset="" />
+              <img src="./src/images/product3.png" alt="" srcset="" />
             </div>
             <div class="item">
-              <img src="./src/images/product1.png" alt="" srcset="" />
+              <img src="./src/images/product4.png" alt="" srcset="" />
             </div>
             <div class="item">
-              <img src="./src/images/product1.png" alt="" srcset="" />
+              <img src="./src/images/product5.png" alt="" srcset="" />
             </div>
             <div class="item">
-              <img src="./src/images/product1.png" alt="" srcset="" />
+              <img src="./src/images/product6.png" alt="" srcset="" />
             </div>
             <div class="item">
-              <img src="./src/images/product1.png" alt="" srcset="" />
+              <img src="./src/images/product7.png" alt="" srcset="" />
             </div>
             <div class="item">
-              <img src="./src/images/product1.png" alt="" srcset="" />
+              <img src="./src/images/product8.png" alt="" srcset="" />
             </div>
           </div>
         </div>
