--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="#"><img src="./src/images/logo_w.png" alt="" /></a>
       <nav class="main-menu">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="business.html">Our Businesses</a></li>
           <li><a href="career.html">Career</a></li>
@@ -284,6 +284,9 @@
           </div>
           <div class="video">
             <img src="./src/images/video.jpg" alt="" />
+            <!-- <video width="934" height="531" autoplay loop muted>
+              <source src="./src/videos/showreel2.mp4" type="video/mp4" />
+            </video> -->
           </div>
         </div>
       </section>
