Video added again

--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
             </div>
           </div>
           <div class="video">
-            <img src="./src/images/video.jpg" alt="" />
-            <!-- <video width="934" height="531" autoplay loop muted>
+            <!-- <img src="./src/images/video.jpg" alt="" /> -->
+            <video width="934" height="531" autoplay loop muted>
               <source src="./src/videos/showreel2.mp4" type="video/mp4" />
-            </video> -->
+            </video>
           </div>
         </div>
       </section>
