Access from home

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <!-- Header -->
     <header>
-      <a href="#"><img src="./src/images/logo_w.png" alt="" /></a>
+      <a href="#"><img src="./src/images/logo_w.png" alt="dal group" /></a>
       <nav class="main-menu">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
