Loading screen fixed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <!-- Loading screen -->
     <div class="loading-bg">
       <div class="progress-bar"></div>
+      <div class="displayL">
+        <h1 class="counter"></h1>
+      </div>
+      <div class="progress-bar"></div>
     </div>
     <!-- Header -->
     <header>
