loading screen modification

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Loading screen -->
     <div class="loading-bg">
       <div class="progress-bar"></div>
+      <img src="./src/images/logo-icon.svg" alt="" width="68px" />
       <div class="displayL">
         <h1 class="counter"></h1>
       </div>
