--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           </div>
           <div class="video">
             <!-- <img src="./src/images/video.jpg" alt="" /> -->
-            <video width="934" height="531" autoplay loop muted>
+            <video autoplay loop muted>
               <source src="./src/videos/showreel2.mp4" type="video/mp4" />
             </video>
           </div>
